# Demo-MNist

./: .gitignore  CMakeLists.txt  Demo-MNist.sln  Demo-MNist.vcxproj  Demo-MNist.vcxproj.filters  DlgCharacterImage.cpp  DlgNeuralNet.cpp  DlgResizeHelper.cpp  DlgTesting.cpp  MNist.aps  MNist.cpp  MNist.h  MNist.rc  MNistDoc.cpp  MainFrm.cpp  MainFrm.h  NeuralNetwork.cpp  NeuralNetwork.h  Preferences.cpp  Preferences.h  README.md  StdAfx.h  WndGraphicMSE.cpp  WndNeuronViewer.cpp  cvt_test.py  cvt_train.py
